Move element symbol to prevent overlapping in spotlight

--- a/src/css/cards.scss
+++ b/src/css/cards.scss
@@ -61,7 +61,7 @@
       position: absolute;
       text-align: center;
       margin: 12px;
-      top: 0;
+      bottom: 0;
       right: 0;
       color: #fff;
       font-size: 24px;
@@ -185,6 +185,10 @@
       font-size: 3em;
     }
   }
+}
+.element-card:not(.spotlight) .element-symbol {
+  top: 0;
+  bottom: initial;
 }
 .info-card {
   ul {
